src/test/ui/attributes/nonterminal-expansion.stderr
error: expected unsuffixed literal or identifier, found `n!()`
  --> $DIR/nonterminal-expansion.rs:5:22
   |
LL |         #[repr(align($n))]
   |                      ^^
...
LL | pass_nonterminal!(n!());
   | ------------------------ in this macro invocation
   |
   = note: this error originates in the macro `pass_nonterminal` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

